Added toggle button to toolbar to hide inherited elements